--- a/recipes/chicken-alfredo.html
+++ b/recipes/chicken-alfredo.html
@@ -8,5 +8,26 @@
 </head>
 <body>
     <h1>Chicken Alfredo Recipe</h1>
+    <img src="../images/Chicken-Alfredo.jpg" alt="Chicken Alfredo" width="400" height="300">
+    <p>Chicken Alfredo Pasta.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>6 oz. fettuccine pasta </li>
+        <li>8 oz. cream cheese</li>
+        <li>6 tbs. butter </li>
+        <li>1/2 cup milk</li>
+        <li>1/2 tsp. garlic powder</li>
+        <li>salt & pepper</li>
+        <li>2 chicken brests</li>
+        <li>2 cups broccoli</li>
+        <li>2 small zuchini</li>
+        <li>1/2 cup chopped red bell pepper</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>Bring a large pot of lightly salted water to a boil. Add pasta, and cook for 8 to 10 minutes, or until al dente; drain.</li>
+        <li>While pasta is cooking, melt cream cheese and butter in a skillet over low heat. Stir until smooth. Stir in milk, and season with garlic powder, salt, and pepper. Simmer for 3 minutes, or until thickened, stirring constantly.</li>
+        <li>Mix in chicken, broccoli, zucchini, and red pepper. Cook 3 minutes over medium heat, then reduce heat, and simmer 5 minutes, or until vegetables are tender. Serve over fettuccine.</li>
+    </ol>
 </body>
 </html>
