--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes Project</h1>
     <a href="./recipes/chicken-alfredo.html">Chicken Alfredo</a>
+    <a href="./recipes/choco-cookie.html">Chocolate Chip Cookies</a>
+    <a href="./recipes/mole.html">Mexican Mole</a>
 </body>
 </html>
