Made aesthetical improvements to homepage

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <h1>Odin Recipes Project</h1>
-    <a href="./recipes/chicken-alfredo.html">Chicken Alfredo</a>
-    <a href="./recipes/choco-cookie.html">Chocolate Chip Cookies</a>
-    <a href="./recipes/mole.html">Mexican Mole</a>
+    <img src="./images/cooking.jpg" alt="Home cook making a meal." height="400" width="600">
+    <br>
+    <h3>Some of my favorite Recepies!</h3>
+    <ul>
+        <li><a href="./recipes/chicken-alfredo.html">Chicken Alfredo</a></li>
+        <li><a href="./recipes/choco-cookie.html">Chocolate Chip Cookies</a></li>
+        <li><a href="./recipes/mole.html">Mexican Mole</a></li>
+    </ul>
 </body>
 </html>
