added a back to homepage button

--- a/recipes/choco-cookie.html
+++ b/recipes/choco-cookie.html
@@ -29,5 +29,6 @@
         <li>Drop dough onto a prepared baking sheet.</li>
         <li>Bake until the edges are golden brown.</li>
     </ol>
+    <a href="../index.html">Home Page</a>
 </body>
 </html>
