--- a/recipes/mole.html
+++ b/recipes/mole.html
@@ -42,5 +42,6 @@
         <li><h3>Step 6</h3>Melt lard in a large skillet over medium heat. Stir in onion, garlic, peanuts, raisins, cumin seeds, thyme, allspice berries, cloves, and cinnamon sticks; cook and stir until onions are soft and golden, 5 to 8 minutes. Remove the cinnamon sticks and other whole spices; add onion mixture to the blender with the chile-tomato mixture and blend until smooth.</li>
         <li><h3>Step 7</h3>Pour chile puree into a large saucepan over medium heat. Stir in 1 cup chicken broth, chocolate, sugar, and salt. Bring mixture to a simmer; stir until chocolate is melted and sauce is thickened and slightly reduced, 10 to 15 minutes.</li>
     </ol>
+    <a href="../index.html">Home Page</a>
 </body>
 </html>
